# sleeper-sdk

./: .gitignore  README.md  SDK_REFERENCE.md  sleeper-api.ts  sleeper_wrapper.py
.claude/: STRUCTURE.md
.claude/commands/: buy-sell.md  (+16 more)
python/: pyproject.toml
python/examples/: module_examples.py  trade_report.py
python/scripts/: snapshot_ktc.py
python/src/sleeper/: __init__.py  cli.py  cli_agent.py  client.py  errors.py
python/src/sleeper/agent/: __init__.py  envelope.py  helpers.py  preview.py
python/src/sleeper/analytics/: __init__.py  chip_value.py  dynasty.py  find_trades_engine.py  gm_mode.py  matchups.py  partner_match.py  pick_value.py  rosters.py  standings.py  trade_suggestions.py  trades.py  user_collector.py  user_trades.py  valuation.py  value_adjustment.py
python/src/sleeper/api/: drafts.py  leagues.py  players.py  state.py  users.py
python/src/sleeper/auth/: __init__.py  client.py
python/src/sleeper/cache/: ktc_cache.py  player_cache.py
python/src/sleeper/cli/: __init__.py  __main__.py  _common.py  _main.py  analysis.py  send_trade.py  trades.py  values.py
python/src/sleeper/enrichment/: __init__.py  id_bridge.py  ktc.py  ktc_history.py  marketplace.py  rankings.py  stats.py  values.py
python/src/sleeper/http/: client.py
python/src/sleeper/types/: __init__.py  bracket.py  draft.py  league.py  matchup.py  player.py  state.py  transaction.py  user.py
python/tests/: test_cli_smoke.py  test_find_trades_engine.py  test_partner_match.py  test_pick_value.py  test_qb_age_discount.py  test_value_adjustment.py
scripts/: protect_main.sh
(+78 files in other folders)
