[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sleeper-sdk"
version = "0.1.0"
description = "Python SDK for the Sleeper Fantasy Football API"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
  "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sleeper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
